--- a/src/public/css/date.css
+++ b/src/public/css/date.css
@@ -41,3 +41,8 @@
     border-bottom: 1px solid #606060;
     padding: 20px;
 }
+
+.pagination {
+    display: flex;
+    justify-content: center;
+}
